# src/middlewares/validation-middlewares.ts
@@ -70,8 +70,8 @@ export class ValidationMiddlewares extends Validator {
     const schema = {
       body: Joi.object({
         email: Joi.string().required().email(),
-        newPassword: Joi.string().required().length(8),
-        oldPassword: Joi.string().required().length(8)
+        newPassword: Joi.string().required().min(8).max(15),
+        oldPassword: Joi.string().required().min(8).max(15)
       })
     };
 
@@ -100,7 +100,40 @@ export class ValidationMiddlewares extends Validator {
     return this.validate(req, res, next, schema);
   };
 
-  static updateRedirectUrl = (
+  static validateShortId = (
+    req: Request,
+    res: Response,
+    next: NextFunction
+  ) => {
+    const schema = {
+      params: Joi.object({
+        shortUrlId: Joi.string().required().uuid()
+      })
+    };
+
+    return this.validate(req, res, next, schema);
+  };
+
+  static validateShortIdVisit = (
+    req: Request,
+    res: Response,
+    next: NextFunction
+  ) => {
+    const schema = {
+      params: Joi.object({
+        shortId: Joi.string()
+          .pattern(/^[a-zA-Z0-9]{6}$/)
+          .required()
+          .messages({
+            "string.pattern.base":
+              "The string must be exactly 6 alphanumeric characters."
+          })
+      })
+    };
+
+    return this.validate(req, res, next, schema);
+  };
+  static validateRedirectUrl = (
     req: Request,
     res: Response,
     next: NextFunction
@@ -110,9 +143,6 @@ export class ValidationMiddlewares extends Validator {
         redirectUrl: Joi.string()
           .required()
           .uri({ scheme: ["http", "https"] })
-      }),
-      params: Joi.object({
-        shortUrlId: Joi.string().required().uuid()
       })
     };
 
